[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/levels/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons/8.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/7.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/2.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/1.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/3.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/5.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/4.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/6.png" type="Texture" id=9]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -32.0
margin_top = -24.0
margin_right = 416.0
margin_bottom = 264.0
color = Color( 0, 0, 0, 1 )

[node name="B1" type="TouchScreenButton" parent="."]
position = Vector2( 80, 64 )
normal = ExtResource( 5 )

[node name="B2" type="TouchScreenButton" parent="."]
position = Vector2( 144, 64 )
normal = ExtResource( 4 )

[node name="B3" type="TouchScreenButton" parent="."]
position = Vector2( 208, 64 )
normal = ExtResource( 6 )

[node name="B4" type="TouchScreenButton" parent="."]
position = Vector2( 272, 64 )
normal = ExtResource( 8 )

[node name="B5" type="TouchScreenButton" parent="."]
position = Vector2( 80, 120 )
normal = ExtResource( 7 )

[node name="B6" type="TouchScreenButton" parent="."]
position = Vector2( 144, 120 )
normal = ExtResource( 9 )

[node name="B7" type="TouchScreenButton" parent="."]
position = Vector2( 208, 120 )
normal = ExtResource( 3 )

[node name="B8" type="TouchScreenButton" parent="."]
position = Vector2( 272, 120 )
normal = ExtResource( 2 )

[connection signal="pressed" from="B1" to="." method="_on_B1_pressed"]
[connection signal="pressed" from="B2" to="." method="_on_B2_pressed"]
[connection signal="pressed" from="B3" to="." method="_on_B3_pressed"]
[connection signal="pressed" from="B4" to="." method="_on_B4_pressed"]
[connection signal="pressed" from="B5" to="." method="_on_B5_pressed"]
[connection signal="pressed" from="B6" to="." method="_on_B6_pressed"]
[connection signal="pressed" from="B7" to="." method="_on_B7_pressed"]
[connection signal="pressed" from="B8" to="." method="_on_B8_pressed"]
